# Real-Time-Data-Lakehouse-Streaming-ML-Platform

./: .env.example  .gitignore  Dockerfile.api  Makefile  README.md  pyproject.toml  requirements.txt
airflow/dags/: ml_training_pipeline.py  realtime_pipeline.py
great_expectations/expectations/: .ge_store_backend_id
great_expectations/gx/expectations/: .ge_store_backend_id
gx/expectations/: .ge_store_backend_id  silver_suite.json
infrastructure/: Dockerfile  docker-compose.yml
infrastructure/k8s/base/: api-deployment.yaml  api-service.yaml
infrastructure/terraform/: providers.tf  s3.tf
src/src/transport_platform/ml/metrics/: metrics.json
src/transport_platform/batch/: build_gold_features.py  build_silver.py  check_gold.py  read_bronze.py
src/transport_platform/contracts/: sncf_gtfsrt_schema.py
src/transport_platform/core/: config.py  logger.py
src/transport_platform/ingestion/: kafka_producer.py  sncf_fetch_decode.py
src/transport_platform/loaders/: bigquery_loader.py  snowflake_loader.py
src/transport_platform/ml/: api.py  dataset.py  features.py  model.py  score.py  train.R  train.py
src/transport_platform/ml/metrics/: metrics.json
src/transport_platform/quality/: validate_silver.py
src/transport_platform/streaming/: spark_structured_stream.py
tests/unit/: test_schema.py
