[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fr-transport-realtime-platform"
version = "0.1.0"
description = "Realtime transport lakehouse pipeline (Kafka + Spark + Airflow + S3)"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pyspark>=3.5",
    "kafka-python>=2.0",
    "apache-airflow>=2.8",
    "great-expectations>=0.18",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------
# Pylint configuration
# ---------------------------

[tool.pylint.main]
py-version = "3.10"
jobs = 0
ignore = ["tests"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
]

[tool.pylint.design]
max-args = 8
max-locals = 20
max-returns = 6
